--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,7 @@
     // 指定非相对模块名称的基本路径
     "baseUrl": "./",
     // 路径映射,设置模块名称基于baseUrl的路径映射关系
-    "paths": {
-      "@/*": ["src/*"],
-      "rhooks": ["./src/index.ts"]
-    },
+    "paths": {},
     // 允许从没有设置默认导出的模块中默认导入。
     "allowSyntheticDefaultImports": true,
     // 跳过对声明类型的检查
